--- a/manuscrit_G_LEFEBVRE/abreviations.tex
+++ b/manuscrit_G_LEFEBVRE/abreviations.tex
@@ -26,7 +26,7 @@
 \itemdesc{PCI}{clinique}{Produit de Contraste Iodé}
 \itemdescang{PDGF}{biologie}{Platelet-Derived Growth Factor}
 \itemdescang{PDGFR}{biologie}{PDGF Receptor}
-\itemdescang{PFS}{clinique}{Progression Free Survival (Survie sans aggravation)}
+\itemdescang{PFS}{clinique}{Progression Free Survival (Survie sans progression, ou sans aggravation)}
 \itemdescang{RTK}{biologie}{Receptor Tyrosine Kinases}
 \itemdescang{RECIST}{clinique}{Response Evaluation Criteria In Solid Tumors}
 \itemdescang{ROI}{clinique}{Region Of Interest}
