--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -489,3 +489,18 @@ urldate = {20/07/2015}
   publisher={Elsevier}
 }
 
+@techreport{michel:hal-01211770,
+  TITLE = {{Mathematical study and asymptotic analysis of a model for tumour drug resistance}},
+  AUTHOR = {Colin, Thierry and Michel, Thomas and Poignard, Clair},
+  URL = {https://hal.inria.fr/hal-01211770},
+  TYPE = {Research Report},
+  NUMBER = {8784},
+  INSTITUTION = {{Inria Bordeaux Sud-Ouest}},
+  YEAR = {2015},
+  MONTH = Oct,
+  KEYWORDS = {Tumour growth modelling ;  partial differential equations ;  asymptotic analysis},
+  PDF = {https://hal.inria.fr/hal-01211770/file/ColinMichelPoignard-HAL.pdf},
+  HAL_ID = {hal-01211770},
+  HAL_VERSION = {v1},
+}
+
