--- a/manuscrit_G_LEFEBVRE/conclusion.tex
+++ b/manuscrit_G_LEFEBVRE/conclusion.tex
@@ -47,6 +47,6 @@ Enfin, un nouveau modèle dans lequel l'\hetero serait une variable à part enti
 
 \paragraph{}
 La modélisation de résistances aux traitements anticancéreux est une nécessité. Les travaux présentés ici constituent un premier pas non négligeable en ce sens. 
-De tels travaux doivent être poursuivis de sorte à ce que la modélisation mathématique apporte à terme un gain clinique, que ce soit par le biais d'aide au diagnostic grâce à de nouveaux critères ou par le biais d'outils de pronostics ou par d'autre biais encore.
+De tels travaux doivent être poursuivis de sorte à ce que la modélisation mathématique apporte à terme un gain clinique, que ce soit par le biais d'aide au diagnostic grâce à de nouveaux critères ou par le biais d'outils de pronostics. % ou par d'autre biais encore.
 
 \end{document}
