--- a/manuscrit_G_LEFEBVRE/annexe_schema_mixte_EFVF.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_schema_mixte_EFVF.tex
@@ -5,7 +5,7 @@
 \chaptermark{Schéma mixte VF/EF} %%% Titre court pour l'entete
 
 \allowdisplaybreaks[1]
-\mylettrine{O}{n} propose ici une méthode mixte volumes finis/éléments finis pour résoudre l'équation de Poisson~:
+\mylettrine{O}{n} propose ici une méthode mixte volumes finis/éléments finis, inspirée de~\cite{latige2013second}, pour résoudre l'équation de Poisson~:
 \begin{equation}\label{eq:anx_poisson}
 \left\{
 \begin{aligned}
@@ -14,7 +14,7 @@
 \end{aligned}
 \right.
 \end{equation}
-où $F(\vecx)$ est une fonction source connue. Pour des raisons pratiques, dans l'ensemble de cette annexe nous noterons $\Pi_i^j := \Pi(x_i,y_j)$ (pas de confusion possible avec un exposant traduisant un indice temporel, ici il n'y a pas de variations temporelles). Les ordonnées seront de la même manière notées en exposant pour toutes les quantités attachées à une maille $\mathcal{M}_i^j$.
+où $F(\vecx)$ est une fonction source connue et où $k$ est une fonction continue. Pour des raisons pratiques, dans l'ensemble de cette annexe nous noterons $\Pi_i^j := \Pi(x_i,y_j)$ (pas de confusion possible avec un exposant traduisant un indice temporel, ici il n'y a pas de variations temporelles). Les ordonnées seront de la même manière notées en exposant pour toutes les quantités attachées à une maille $\mathcal{M}_i^j$.
 
 \section{Description de la méthode}
 Plaçons nous dans un volume de contrôle $V_c$, maille du maillage dual.  La formulation volume fini donne alors~:
@@ -26,7 +26,7 @@ Plaçons nous dans un volume de contrôle $V_c$, maille du maillage dual.  La fo
 \resizebox{.7\textwidth}{!}{\input{tex_pictures/methode_mixte_EFVF.tex}}
 \caption{\label{fig:methode_mixte_EFVF}Méthode mixte éléments finis/volumes finis.}
 \end{figure}
-Notons $\Gamma=\displaystyle \bigcup_{i=1,2,3,4} \Gamma_i$ le bord du volume de contrôle~$V_c$, comme montré sur la Figure~\ref{fig:methode_mixte_EFVF}. La formule de Stockes nous permet alors d'écrire~:
+Notons $\Gamma=\displaystyle \bigcup_{i=1,2,3,4} \Gamma_i$ le bord du volume de contrôle~$V_c$, comme montré sur la Figure~\ref{fig:methode_mixte_EFVF}. La formule de Stokes nous permet alors d'écrire~:
 \begin{equation}
 \int_{\Gamma_1}k \partial_y \Pi \dx - \int_{\Gamma_2}k \partial_x \Pi \dy - \int_{\Gamma_3}k \partial_y \Pi \dx + \int_{\Gamma_4}k \partial_x \Pi \dy = \int_{V_c}F \dx \dy.
 \end{equation}
